--- a/hotels.html
+++ b/hotels.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="style.css">
 <style>
 body { font-family: Arial, sans-serif; background-color: #121212; color:#e0e0e0; margin:0; padding:0; }
+.container2 {max-width: 900px; margin:40px auto; padding:20px; background-color: var(--card-bg); border-radius:12px; box-shadow:0 4px 20px rgba(0,0,0,0.5); border:1px solid var(--border-color);}
 .container { max-width: 1000px; margin: 20px auto; display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px; }
 .card { background-color: #1e1e1e; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.5); overflow: hidden; display: flex; flex-direction: column; }
 .card img { width: 100%; height: 200px; object-fit: cover; }
@@ -36,6 +37,8 @@ body { font-family: Arial, sans-serif; background-color: #121212; color:#e0e0e0;
 </style>
 </head>
 <body>
+<div class="container2" style="max-width:600px;">
+<h1>االمطاعم 🍲</h1>
 <div class="container" id="cardsContainer"></div>
 
 <!-- نموذج الحجز -->
