--- a/stores.html
+++ b/stores.html
@@ -19,6 +19,7 @@
 }
 body { font-family: Arial, sans-serif; background-color: #121212; color:#e0e0e0; margin:0; padding:0; }
 .container2 {max-width: 900px; margin:40px auto; padding:20px; background-color: var(--card-bg); border-radius:12px; box-shadow:0 4px 20px rgba(0,0,0,0.5); border:1px solid var(--border-color);}
+.btn-back {background-color:var(--blue-royal); color:var(--white); padding:8px 15px; border-radius:6px; text-decoration:none; font-size:0.9em; transition:background-color 0.3s; border:none; cursor:pointer; margin-left:10px;}
 .container { max-width: 1000px; margin: 20px auto; display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px; }
 .card { background-color: #1e1e1e; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.5); overflow: hidden; display: flex; flex-direction: column; }
 .card img { width: 100%; height: 200px; object-fit: cover; }
@@ -48,6 +49,7 @@ body { font-family: Arial, sans-serif; background-color: #121212; color:#e0e0e0;
 <body>
 <div class="container2" style="max-width:600px;">
 <h1>المحلات التجارية 🛒</h1>
+<a href="main_services.html" class="btn-back">🏠 الرئيسية</a>
 <div class="container" id="cardsContainer"></div>
 
 <!-- مودال الطلب -->
