--- a/main_services.html
+++ b/main_services.html
@@ -146,7 +146,7 @@
         <h1>مرحباً بك في مصر! 👋</h1>    
             
         <div class="services-grid">    
-            <a href="eye.html" class="service-card">    
+            <a href="https://step-by-step-2026.github.io/Eye-of-Egypt-/index.html" class="service-card">    
                 <span>🗺️</span> المعالم السياحية    
             </a>    
             <a href="assistants_cards.html?role=GUIDE" class="service-card">    
