--- a/main_services.html
+++ b/main_services.html
@@ -336,8 +336,8 @@
                     result.textContent = "✔️ تم إرسال البلاغ بنجاح";
 
                     setTimeout(() => {
-                        alert("سيتم تحويلك للاتصال بهذا الرقم الآن: 999");
-                        window.location.href = "tel:999";
+                        alert("سيتم تحويلك للاتصال بشرطه النجده عن طريق هذا الرقم : 123");
+                        window.location.href = "tel:122";
                     }, 800);
                 })
                 .catch(() => {
